[gd_scene load_steps=7 format=3 uid="uid://d72sny5xqm2l"]

[ext_resource type="Script" path="res://src/scripts/Lesson/Prelim/Prelim_1.14.gd" id="1_nt3ei"]
[ext_resource type="Texture2D" uid="uid://byio0luq7uppw" path="res://assets/images/Background/StarField.png" id="2_q366n"]
[ext_resource type="PackedScene" uid="uid://r7v4w30c0k7l" path="res://src/scenes/Components/Pause.tscn" id="3_d3mr6"]
[ext_resource type="PackedScene" uid="uid://c8lo8combalxg" path="res://src/scenes/Components/NavigationControls.tscn" id="4_vuknt"]
[ext_resource type="PackedScene" uid="uid://c7pggom3bb7tm" path="res://src/scenes/Components/ZoomableImage.tscn" id="5_bqmju"]
[ext_resource type="Texture2D" uid="uid://m6qivu3r80w8" path="res://assets/images/Lesson/Prelim/prelim_1.14.png" id="5_f3sa8"]

[node name="Prelim1_14" type="Node2D"]
script = ExtResource("1_nt3ei")

[node name="StarField" type="Sprite2D" parent="."]
position = Vector2(963.999, 541.998)
scale = Vector2(1.88281, 1.05859)
texture = ExtResource("2_q366n")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 68.0
offset_top = 220.0
offset_right = 1404.0
offset_bottom = 1077.0
theme_override_constants/separation = 30

[node name="Header" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 80
text = "Rich Text"
fit_content = true

[node name="DetailOne" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="DetailTwo" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="ZoomableImage" parent="." instance=ExtResource("5_bqmju")]
offset_right = 400.0
offset_bottom = 350.0
image_texture = ExtResource("5_f3sa8")
metadata/_edit_use_anchors_ = true

[node name="ImageContainer" parent="ZoomableImage" index="0"]
offset_left = 658.0
offset_top = 54.0
offset_right = 2578.0
offset_bottom = 1134.0

[node name="ImageButton" parent="ZoomableImage/ImageContainer" index="0"]
anchor_top = 0.456
anchor_bottom = 0.456
offset_left = -212.0
offset_top = -150.48
offset_right = 188.0
offset_bottom = 149.52
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1, 0.907966)

[node name="FullScreenOverlay" parent="ZoomableImage" index="1"]
visible = false

[node name="NavigationControls" parent="." instance=ExtResource("4_vuknt")]
visible = false
manual_page_number = 14
previous_scene_path = "res://src/scenes/Lesson/Prelim/Prelim_1.13.tscn"
next_scene_path = "res://src/scenes/Lesson/Prelim/Prelim_1.15.tscn"

[node name="Pause" parent="." instance=ExtResource("3_d3mr6")]

[editable path="ZoomableImage"]
